--- a/Python_Flask/섹션 2 : HTML/17. HTML 평가문제-사진.md
+++ b/Python_Flask/섹션 2 : HTML/17. HTML 평가문제-사진.md
@@ -1,10 +1,22 @@
 ### 문제의도
 제공받은 사진과 같은 형태 웹 페이지를 작성.
 
-#### 제공받은 사진
+### 제공받은 사진 =>
+
+
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/4d565fae-f5c1-4f92-9e67-a5a710552d66)
 
-#### 직접 작성한 출력 결과
+
+ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+
+
+### 직접 작성한 출력 결과 =>
+
+
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/d5debd08-ffbb-474c-857d-68798069fe63)
+
+
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/ed0c66ff-662c-436f-8e07-810e27e3450a)
+
+
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/d232360e-4815-47fd-8570-fe7a3c5779a1)
