--- a/Python_Flask/섹션 2 : HTML/17. HTML 평가문제-사진.md
+++ b/Python_Flask/섹션 2 : HTML/17. HTML 평가문제-사진.md
@@ -1,4 +1,6 @@
 ### 문제의도
+# 서울ICT이노베이션스퀘어  웹개발 취업캠프
+
 제공받은 사진과 같은 형태 웹 페이지를 작성.
 
 ### 제공받은 사진 =>
@@ -10,13 +12,15 @@
 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
 
 
-### 직접 작성한 출력 결과 =>
+직접 작성한 출력 결과 =>
 
 
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/d5debd08-ffbb-474c-857d-68798069fe63)
 
+ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
 
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/ed0c66ff-662c-436f-8e07-810e27e3450a)
 
+ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
 
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/d232360e-4815-47fd-8570-fe7a3c5779a1)
