--- a/Python_Flask/섹션 4: Bootstrap/출력-결과-기록.md
+++ b/Python_Flask/섹션 4: Bootstrap/출력-결과-기록.md
@@ -5,3 +5,10 @@
 
 # BootstrapV5_navbar.self_pratice 출력 결과 =>
 ![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/ada237d4-a6a7-495c-82cf-95d38bf03092)
+
+
+
+# BootstrapV5_Project_Main.self_practice 출력 결과 =>
+![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/52637e7e-0e81-48a3-a40b-a221225a561b)
+![image](https://github.com/LeeKunH/NIPA_Seoul_Web/assets/139840981/90581f80-ede1-4d16-a5cb-e590df33a7cb)
+
