--- a/Python_Flask/섹션 7 : Flask_basics/기록.md
+++ b/Python_Flask/섹션 7 : Flask_basics/기록.md
@@ -1,9 +1,13 @@
 # 기록
 이번 연습 코드는 가상환경을 구축하고 진행.
 
-
-왜?
-
-
+왜 =>
 영상에서 사용한 flask 버전과 현재 연습하고 있는 시점의 flask 버전을 통일시키기 위함.
+
+## requirements.txt
+> 원본 txt파일에서는 MarkupSafe==1.0 되어있음.
+> 
+> 하지만 이 상태로 설치하면 오류 발생.
+> 
+> 따라서  MarkupSafe>=1.0 으로 수정 후 버전 통일 진행.
 
