--- a/Python_Flask/섹션 8: templates(템플릿)/기록.md
+++ b/Python_Flask/섹션 8: templates(템플릿)/기록.md
@@ -1,1 +1,5 @@
 # 기록
+> 07-Simple-Project_self_practice.py = 섹션 8: templates(템플릿) 단원 평가문제
+>
+> Template-Basics-pratice1 = 섹션 8: templates(템플릿) 단원 연습
+> Template-Basics-pratice2 = 섹션 8: templates(템플릿) 단원 연습
