--- a/Python_Flask/섹션 8: templates(템플릿)/기록.md
+++ b/Python_Flask/섹션 8: templates(템플릿)/기록.md
@@ -1,5 +1,6 @@
 # 기록
 > 07-Simple-Project_self_practice.py = 섹션 8: templates(템플릿) 단원 평가문제
 >
-> Template-Basics-pratice1 = 섹션 8: templates(템플릿) 단원 연습
-> Template-Basics-pratice2 = 섹션 8: templates(템플릿) 단원 연습
+> Template-Basics-pratice1 폴더 = 섹션 8: templates(템플릿) 단원 연습 (68~72 기본 템플릿, 변수, 제어 흐름 논리, 상속, url_for 함수)
+>  
+> Template-Basics-pratice2 폴더 = 섹션 8: templates(템플릿) 단원 연습 (73- 템플릿 폼)
