--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -186,9 +186,300 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b7fc867",
+   "metadata": {},
+   "source": [
+    "# 97번 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cdfa9f29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "甲\n",
+      "찾을 수 없는 성씨 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이\n",
+    "LastName = {'가': '甲', '나': '乙', '다': '丙', '라': '丁', '마': '戊', '바': '己', '사': '庚'}\n",
+    "\n",
+    "def serch(text) :\n",
+    "    try :\n",
+    "        print(LastName[text])\n",
+    "    except KeyError :\n",
+    "        print(\"찾을 수 없는 성씨 입니다.\")\n",
+    "\n",
+    "serch(\"가\")\n",
+    "serch(\"강\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7830a9bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "甲\n",
+      "찾을 수 없는 성씨 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "LastName = {'가': '甲', '나': '乙', '다': '丙', '라': '丁', '마': '戊', '바': '己', '사': '庚'}\n",
+    "\n",
+    "def serch(text) :\n",
+    "\n",
+    "    if text in LastName :\n",
+    "        print(LastName[text])\n",
+    "    else :\n",
+    "        print(\"찾을 수 없는 성씨 입니다.\")\n",
+    "\n",
+    "\n",
+    "serch(\"가\")\n",
+    "serch(\"강\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4393e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'가': '甲', '나': '乙', '다': '丙', '라': '丁', '마': '戊', '바': '己', '사': '庚'}\n",
+      "['가', '나', '다', '라', '마', '바', '사']\n"
+     ]
+    }
+   ],
+   "source": [
+    "LastName = {'가': '甲', '나': '乙', '다': '丙', '라': '丁', '마': '戊', '바': '己', '사': '庚'}\n",
+    "print(LastName)\n",
+    "\n",
+    "K = list(LastName)\n",
+    "print(K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b0ecf06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "甲\n",
+      "찾을 수 없는 성씨 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 풀이\n",
+    "def serch(text) :\n",
+    "    # 딕셔너리 > 리스트로 형변화\n",
+    "    k_list = list(LastName)\n",
+    "    for i in range(len(k_list)+1) :\n",
+    "        # 조건문 사용 > 인덱싱을 통해 1글자씩 모두 비교\n",
+    "        if text == k_list[i] :\n",
+    "            return print(LastName[text]) # 키값으로 인덱싱 후 출력\n",
+    "        else :\n",
+    "            return print(\"찾을 수 없는 성씨 입니다.\")\n",
+    "\n",
+    "serch(\"가\")\n",
+    "serch(\"강\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a1fb76",
+   "metadata": {},
+   "source": [
+    "# 96"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "958f6898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 02 03 04 \n",
+      "02 04 06 08 \n",
+      "03 06 09 12 \n",
+      "04 08 12 16 \n",
+      "ㅡㅡㅡㅡㅡ\n",
+      "01 02 03 04 05 06 07 08 09 \n",
+      "02 04 06 08 10 12 14 16 18 \n",
+      "03 06 09 12 15 18 21 24 27 \n",
+      "04 08 12 16 20 24 28 32 36 \n",
+      "05 10 15 20 25 30 35 40 45 \n",
+      "06 12 18 24 30 36 42 48 54 \n",
+      "07 14 21 28 35 42 49 56 63 \n",
+      "08 16 24 32 40 48 56 64 72 \n",
+      "09 18 27 36 45 54 63 72 81 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 풀이1\n",
+    "def square(num) :\n",
+    "    for i in range(1, num+1) :# 행의 개수\n",
+    "        for j in range(1, num + 1) : # 열의 개수\n",
+    "            print('{:02d}'.format(i*j), end=\" \")\n",
+    "        print()\n",
+    "\n",
+    "\n",
+    "square(4)\n",
+    "print(\"ㅡㅡㅡㅡㅡ\")\n",
+    "square(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c1ccc216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 02 03 04 \n",
+      "02 04 06 08 \n",
+      "03 06 09 12 \n",
+      "04 08 12 16 \n",
+      "ㅡㅡㅡㅡㅡ\n",
+      "01 02 03 04 05 06 07 08 09 \n",
+      "02 04 06 08 10 12 14 16 18 \n",
+      "03 06 09 12 15 18 21 24 27 \n",
+      "04 08 12 16 20 24 28 32 36 \n",
+      "05 10 15 20 25 30 35 40 45 \n",
+      "06 12 18 24 30 36 42 48 54 \n",
+      "07 14 21 28 35 42 49 56 63 \n",
+      "08 16 24 32 40 48 56 64 72 \n",
+      "09 18 27 36 45 54 63 72 81 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 풀이2\n",
+    "def square(num) :\n",
+    "    for i in range(1, num+1) :\n",
+    "        for j in range(1, num+1) :\n",
+    "            if (i*j<10) : # 두수를 곱해 1의 자리 수라면 ....0을 붙여 출력\n",
+    "                print(0, end=\"\")\n",
+    "            print(i*j, end=\" \")\n",
+    "        print()\n",
+    "\n",
+    "square(4)\n",
+    "print(\"ㅡㅡㅡㅡㅡ\")\n",
+    "square(9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff6d0a6",
+   "metadata": {},
+   "source": [
+    "# 95"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba01814",
+   "id": "75df0582",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "226ad701",
+   "metadata": {},
+   "source": [
+    "# 94"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8f23d930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "추천 메뉴는!! 라면6입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이\n",
+    "import random\n",
+    "\n",
+    "def lunch_reco(list_food) :\n",
+    "    food = random.choice(list_food)\n",
+    "    print(f'추천 메뉴는!! {food}입니다.')\n",
+    "\n",
+    "\n",
+    "lunch = [\"라면1\", \"라면2\", \"라면3\", \"라면4\", \"라면5\", \"라면6\"]\n",
+    "lunch_reco(lunch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "241228e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "추천 메뉴는!! 라면2입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "import random\n",
+    "\n",
+    "def lunch_reco(list_food) :\n",
+    "    index = random.randint(0,len(lunch)-1) # ~이상 ~ 이하\n",
+    "    print(f'추천 메뉴는!! {lunch[index]}입니다.')\n",
+    "\n",
+    "\n",
+    "lunch = [\"라면1\", \"라면2\", \"라면3\", \"라면4\", \"라면5\", \"라면6\"]\n",
+    "lunch_reco(lunch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70fe7cec",
    "metadata": {},
    "outputs": [],
    "source": []
