--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7fc867",
+   "id": "d1f22288",
    "metadata": {},
    "source": [
     "# 97번 문제"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdfa9f29",
+   "id": "4c46d20e",
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +215,7 @@
     "def serch(text) :\n",
     "    try :\n",
     "        print(LastName[text])\n",
+    "        \n",
     "    except KeyError :\n",
     "        print(\"찾을 수 없는 성씨 입니다.\")\n",
     "\n",
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7830a9bf",
+   "id": "cddf157b",
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e4393e30",
+   "execution_count": 2,
+   "id": "ce0c488f",
    "metadata": {},
    "outputs": [
     {
@@ -278,38 +279,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5b0ecf06",
+   "execution_count": 10,
+   "id": "8519a188",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "甲\n",
+      "찾을 수 없는 성씨 입니다.\n",
       "찾을 수 없는 성씨 입니다.\n"
      ]
     }
    ],
    "source": [
-    "# 3번 풀이\n",
+    "# 3번 풀이 - 틀린 풀이\n",
     "def serch(text) :\n",
     "    # 딕셔너리 > 리스트로 형변화\n",
     "    k_list = list(LastName)\n",
+    "    \n",
     "    for i in range(len(k_list)+1) :\n",
     "        # 조건문 사용 > 인덱싱을 통해 1글자씩 모두 비교\n",
     "        if text == k_list[i] :\n",
     "            return print(LastName[text]) # 키값으로 인덱싱 후 출력\n",
     "        else :\n",
     "            return print(\"찾을 수 없는 성씨 입니다.\")\n",
+    "        \n",
     "\n",
-    "serch(\"가\")\n",
+    "serch(\"나\")\n",
+    "serch(\"강\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd491269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "乙\n",
+      "찾을 수 없는 성씨 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 풀이 - 수정풀이\n",
+    "def serch(text) :\n",
+    "    # 딕셔너리 > 리스트로 형변화\n",
+    "    k_list = list(LastName)\n",
+    "    \n",
+    "    for i in range(len(k_list)+1) :\n",
+    "     \n",
+    "        # 인덱스가 7까지 갔다면 내부에 없다는 소리\n",
+    "        if i == 7 :\n",
+    "            return print(\"찾을 수 없는 성씨 입니다.\")\n",
+    "        \n",
+    "        if text != k_list[i] :\n",
+    "            continue\n",
+    "            \n",
+    "        else :\n",
+    "            return print(LastName[text]) # 키값으로 인덱싱 후 출력\n",
+    "\n",
+    "serch(\"나\")\n",
     "serch(\"강\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19a1fb76",
+   "id": "02944961",
    "metadata": {},
    "source": [
     "# 96"
@@ -318,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "958f6898",
+   "id": "9e53d95a",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c1ccc216",
+   "id": "ad263287",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff6d0a6",
+   "id": "650ee2e4",
    "metadata": {},
    "source": [
     "# 95"
@@ -409,14 +449,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75df0582",
+   "id": "089ae710",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "226ad701",
+   "id": "5905311b",
    "metadata": {},
    "source": [
     "# 94"
@@ -425,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8f23d930",
+   "id": "a8d3cde4",
    "metadata": {},
    "outputs": [
     {
@@ -452,8 +492,10 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "241228e8",
-   "metadata": {},
+   "id": "6997fbf0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -479,7 +521,99 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70fe7cec",
+   "id": "77802dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f8e367",
+   "metadata": {},
+   "source": [
+    "# 36"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3359000f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['피자', '치킨']\n",
+      "['햄버거', '피자', '치킨', '부닭찌개', '족발']\n",
+      "['햄버거', '부닭찌개', '족발']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이 슬라이싱 사용 풀이\n",
+    "food_list = ['햄버거', '피자', '치킨', '부닭찌개', '족발']\n",
+    "print(food_list[1:3]) # 리스트 슬라이싱 새로운 객체 반환\n",
+    "print(food_list)\n",
+    "\n",
+    "del food_list[1:3]\n",
+    "print(food_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e121d8ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "피자\n",
+      "['햄버거', '치킨', '부닭찌개', '족발']\n",
+      "치킨\n",
+      "['햄버거', '부닭찌개', '족발']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이 pop메서드 사용\n",
+    "food_list = ['햄버거', '피자', '치킨', '부닭찌개', '족발']\n",
+    "print(food_list.pop(1)) # POP 메서드는 원본객체를 수정하는 메서드/함수\n",
+    "print(food_list)\n",
+    "print(food_list.pop(1))\n",
+    "print(food_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1560aadb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a47382e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e352d085",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc28738d",
    "metadata": {},
    "outputs": [],
    "source": []
