--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bd491269",
+   "id": "a54a1a44",
    "metadata": {},
    "outputs": [
     {
@@ -448,11 +448,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "089ae710",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000100\n",
+      "001110\n",
+      "011111\n",
+      "1111111\n",
+      "1111111\n",
+      "0111110\n",
+      "0011100\n",
+      "0001000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 함수 정의\n",
+    "# 함수에 숫자를 전달했을 때 그게 맞는 마름모를 출력하는 기능 정의\n",
+    "def rhombus(n) :\n",
+    "    for i in range(1, n+1) : # 1번 반복문 : 마름모 윗 부분 출력 행 개수를 의미\n",
+    "        for j in range(n-i) : # 앞 부분 0의 개수를 의미하는 반복문 # 시행 증가 시 출력되는 0개수 감소 3개 > 2개 > 1개 > 0개\n",
+    "            print(0, end=\"\")\n",
+    "        for j in range(1, i*2) : # 시행마다 출력하는 1의 개수 의미하는 반복문 # 1 > 3 > 5 > 7 출력\n",
+    "            print(1, end = \"\")\n",
+    "        for j in range(1, n-i) : # 뒷 부분 0의 개수를 의미하는 반복문 # 시행마다 출력되는 0개수 감소 # 출력 행을 의미하는 i를 사용\n",
+    "            print(0, end=\"\")\n",
+    "        print()\n",
+    "    for i in range(n) : # 마름모 아래 부분 출력 행 개수 의미하는 반복문 # i값 출력되는 행에 대한 의미를 가지고 있는 중요 변수\n",
+    "        for j in range(i) : # 앞 부분 0 개수 의미 # 0개 > 1개 > 2개 > 3개 ...\n",
+    "            print(0, end=\"\")\n",
+    "        for j in range(n*2, 1+i*2,-1) : # 시행마다 출력하는 1의 개수 감소되도록 # 7개 > 5개 > 3개 >1개 ..# 역순출력\n",
+    "            print(1, end='')\n",
+    "        for j in range(i) : # 앞 부분 0 개수 의미 # 0개 > 1개 > 2개 > 3개 ...\n",
+    "            print(0, end=\"\")\n",
+    "        print()\n",
+    "\n",
+    "# 함수 호출 > 결과 확인\n",
+    "# rhombus(10)\n",
+    "rhombus(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -528,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f8e367",
+   "id": "e8e78a99",
    "metadata": {},
    "source": [
     "# 36"
@@ -537,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3359000f",
+   "id": "a968636d",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e121d8ff",
+   "id": "944efe45",
    "metadata": {},
    "outputs": [
     {
@@ -589,31 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1560aadb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a47382e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e352d085",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc28738d",
+   "id": "d23402d3",
    "metadata": {},
    "outputs": [],
    "source": []
