--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -558,9 +558,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c968a68e",
+   "metadata": {},
+   "source": [
+    "# 93"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "77802dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".다있 고지워까가 에표목심핵 씩금조 일매 는휘건이"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이\n",
+    "def reverse_print(strings) :\n",
+    "    list_str = list(strings)\n",
+    "\n",
+    "    while ( bool(list_str)) :\n",
+    "        print(list_str.pop(), end=\"\")\n",
+    "\n",
+    "\n",
+    "reverse_print(\"이건휘는 매일 조금씩 핵심목표에 가까워지고 있다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "29561a39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".다있 고지워까가 에표목심핵 씩금조 일매 는휘건이"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "def reverse_print(strings) :\n",
+    "    list_str = list(strings)\n",
+    "        \n",
+    "    for i in list_str[::-1] :\n",
+    "        print(i, end = \"\")\n",
+    "\n",
+    "\n",
+    "reverse_print(\"이건휘는 매일 조금씩 핵심목표에 가까워지고 있다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "176fc5e4",
+   "metadata": {},
+   "source": [
+    "# 92"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "57da3704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function abs in module builtins:\n",
+      "\n",
+      "abs(x, /)\n",
+      "    Return the absolute value of the argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test\n",
+    "help(abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "48b3983f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function stock in module __main__:\n",
+      "\n",
+      "stock(buy, sell, shares)\n",
+      "    매수가격-sell\n",
+      "    매도가격-buy\n",
+      "    수량-shares\n",
+      "    3개 변수를 가지고 총손익(income)과 수익률(rate)를 반환/출력하는 stock() 함수입니다.\n",
+      "    \n",
+      "    income = (sell - buy)*shares\n",
+      "    rate = sell/buy*100-100\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stock(buy, sell, shares) :\n",
+    "    '''\n",
+    "    매수가격-sell\n",
+    "    매도가격-buy\n",
+    "    수량-shares\n",
+    "    3개 변수를 가지고 총손익(income)과 수익률(rate)를 반환/출력하는 stock() 함수입니다.\n",
+    "    \n",
+    "    income = (sell - buy)*shares\n",
+    "    rate = sell/buy*100-100\n",
+    "    '''\n",
+    "    \n",
+    "    income = (sell - buy)*shares\n",
+    "    rate = sell/buy*100-100\n",
+    "    print(f\"({income}, {rate})\")\n",
+    "\n",
+    "    \n",
+    "help(stock)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "464ff930",
+   "metadata": {},
+   "source": [
+    "# 91"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "20642d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1360000, 20.48192771084338)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stock(buy, sell, shares) :\n",
+    "    \n",
+    "    income = (sell - buy)*shares\n",
+    "    rate = sell/buy*100-100\n",
+    "    print(f\"({income}, {rate})\")\n",
+    "\n",
+    "stock(66400, 80000, 100) # 함수 호출"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77802dd2",
+   "id": "ecfe4b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26f965c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2004070",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3060534e",
    "metadata": {},
    "outputs": [],
    "source": []
