--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c968a68e",
+   "id": "8c1b8cb8",
    "metadata": {},
    "source": [
     "# 93"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "29561a39",
+   "id": "55cd3dbc",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176fc5e4",
+   "id": "5e23f470",
    "metadata": {},
    "source": [
     "# 92"
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "57da3704",
+   "id": "54f6fc47",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "48b3983f",
+   "id": "a69b9483",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464ff930",
+   "id": "c6f921e7",
    "metadata": {},
    "source": [
     "# 91"
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "20642d44",
+   "id": "85911fcd",
    "metadata": {},
    "outputs": [
     {
@@ -725,33 +725,359 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecfe4b9c",
+   "cell_type": "markdown",
+   "id": "0ceb6045",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b676d352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홍길동님 안녕하세요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(name) :\n",
+    "    print(f'{name}님 안녕하세요.')\n",
+    "\n",
+    "hello(\"홍길동\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5371da48",
+   "metadata": {},
+   "source": [
+    "# 89"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87491774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "소인수분해 할 숫자 입력 : 24\n",
+      "num = 8*3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이 틀림\n",
+    "num = int(input(\"소인수분해 할 숫자 입력 : \"))\n",
+    "\n",
+    "num_2 = 0 # 시행횟수 확인\n",
+    "num_3 = 0\n",
+    "# num_5 = 0\n",
+    "# num_7 = 0\n",
+    "\n",
+    "while (num > 1 ) :\n",
+    "\n",
+    "    if (num % 2 == 0) :\n",
+    "        num = num //2\n",
+    "        num_2 += 1\n",
+    "        continue\n",
+    "\n",
+    "    elif (num % 3 == 0) :\n",
+    "        num = num // 3\n",
+    "        num_3 += 1\n",
+    "        continue\n",
+    "\n",
+    "\n",
+    "print(f'num = {2**num_2}*{3**num_3}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0938665",
+   "metadata": {},
+   "source": [
+    "소인수분해 할 숫자 입력 : 24\n",
+    "num = 8*3\n",
+    "\n",
+    "숫자를 입력하세요: 35\n",
+    "무한반복 발생\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d4ec5696",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요: 24\n",
+      "num의 소인수분해 결과: 2*2*2*3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "\n",
+    "def prime_factors(n):\n",
+    "    factors = []\n",
+    "    i = 2\n",
+    "    while n > 1:\n",
+    "        if n % i == 0:\n",
+    "            factors.append(i)\n",
+    "            n //= i\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    return factors\n",
+    "\n",
+    "num = int(input(\"숫자를 입력하세요: \"))\n",
+    "result = prime_factors(num)\n",
+    "result = '*'.join(str(x) for x in result)\n",
+    "# result = '*'.join([str(x) for x in result])\n",
+    "print(f\"num의 소인수분해 결과: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1d301d0",
+   "metadata": {},
+   "source": [
+    "숫자를 입력하세요: 24\n",
+    "num의 소인수분해 결과: 2*2*2*3\n",
+    "\n",
+    "숫자를 입력하세요: 35\n",
+    "num의 소인수분해 결과: 5*7\n",
+    "\n",
+    "숫자를 입력하세요: 55\n",
+    "num의 소인수분해 결과: 5*11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "808dbbc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요: 24\n",
+      "num = 2*2*2*3"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 풀이\n",
+    "\n",
+    "num = int(input(\"숫자를 입력하세요: \"))\n",
+    "print(\"num = \", end=\"\") # 옵션 매개변수 사용\n",
+    "while(True) : # 무한반복문 1.\n",
+    "    i = 2\n",
+    "    while(True) : # 무한반복문 2.\n",
+    "        if (num%i ==0 ) : # 1번 소수 2 나눠떨어지는지 확인\n",
+    "            num = num / i # 참이면 > 나누기 진행\n",
+    "            print(i, end=\"\") # 문제 의도 파악 > 원하는 출력 형식 존재\n",
+    "            break # 처음 수로 잘 나눠떨어지면 2번 무한반복문 중단.\n",
+    "        else : # 1번 소수로 나눠떨어지지 않는 경우\n",
+    "            i = i + 1 # 1번 소수 i=2를 1씩 증가시킴 > 다시 2번 무한반복 시작 .. 따라서 2로 나눠보고..3으로 나눠보고...진행\n",
+    "    if (num == 1 ) : # i를 계속 증가시키면서 나누다가 더 이상 나눠떨어지지 않는 1이되면 1번 무한반복문 중단.\n",
+    "        break\n",
+    "    else : # 한 스탭이 다 돌면 문제 의도에 따라 원하는 출력값 출력하고 다시 시작\n",
+    "        print(\"*\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d339aa3",
+   "metadata": {},
+   "source": [
+    "# 88"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42e03b0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "1번 풀이 틀림\n",
+    "왜?\n",
+    "n = 10일땐 문제없음\n",
+    "\n",
+    "하지만 1000 일 경우 원하는 값보다 크게 나옴\n",
+    "266333 <> 233168\n",
+    "\n",
+    "왜?\n",
+    "1번 풀이 출력값에서 공배수값들으 빼줘야함\n",
+    "    ex) 15 30 45...\n",
+    "현재 공배수값들이 중복되어 더해져서 원하는 값보다 크게 나옴.\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def test1(n) :\n",
+    "    \n",
+    "    n_3 = 3\n",
+    "    n_5 = 5\n",
+    "    num_3 = []\n",
+    "    num_5 = []\n",
+    "\n",
+    "    while (n_3 < n) : # 10보다 작아야 하는 상황.\n",
+    "        num_3.append(n_3)\n",
+    "        n_3 += 3\n",
+    "\n",
+    "    while (n_5 < n) :\n",
+    "        num_5.append(n_5)\n",
+    "        n_5 += 5\n",
+    "    \n",
+    "    total_num = sum(num_3) + sum(num_5)\n",
+    "    print(total_num)\n",
+    "\n",
+    "\n",
+    "test1(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "89298e4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266333\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "18fdb439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "\n",
+    "def test2(n) :\n",
+    "    \n",
+    "    n_3 = 3\n",
+    "    n_5 = 5\n",
+    "    n_15 = n_3*n_5\n",
+    "\n",
+    "    num_3 = []\n",
+    "    num_5 = []\n",
+    "    num_15 = []\n",
+    "    \n",
+    "    while (n_3 < n) :\n",
+    "        num_3.append(n_3)\n",
+    "        n_3 += 3\n",
+    "\n",
+    "    while (n_5 < n) :\n",
+    "        num_5.append(n_5)\n",
+    "        n_5 += 5\n",
+    "\n",
+    "    total_num = sum(num_3) + sum(num_5)\n",
+    "    print(total_num) # 1차 합\n",
+    "\n",
+    "    while ( n_15 < n) :\n",
+    "        num_15.append(n_15)\n",
+    "        n_15 += 15\n",
+    "    \n",
+    "    total_num = sum(num_3) + sum(num_5) - sum(num_15)\n",
+    "    print(total_num) # 최종 합\n",
+    "\n",
+    "\n",
+    "\n",
+    "test2(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ddf849e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266333\n",
+      "233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3725336e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 풀이\n",
+    "\n",
+    "total_sum = 0  # 총합을 저장할 변수를 초기화합니다.\n",
+    "\n",
+    "for num in range(1, 1000):  # 1부터 999까지의 수를 확인합니다.\n",
+    "    if num % 3 == 0 or num % 5 == 0:  # 3 또는 5로 나누어 떨어지는 수인지 확인합니다.\n",
+    "        total_sum += num  # 나누어 떨어지는 수를 총합에 더해줍니다.\n",
+    "\n",
+    "print(total_sum)  # 총합을 출력합니다."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26f965c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2004070",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3060534e",
+   "id": "c0805437",
    "metadata": {},
    "outputs": [],
    "source": []
