--- a/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
+++ b/Python_Algorithm_Problem/파이썬 문법 문제풀이-100제.ipynb
@@ -456,9 +456,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000100\n",
-      "001110\n",
-      "011111\n",
+      "0001000\n",
+      "0011100\n",
+      "0111110\n",
       "1111111\n",
       "1111111\n",
       "0111110\n",
@@ -476,7 +476,7 @@
     "            print(0, end=\"\")\n",
     "        for j in range(1, i*2) : # 시행마다 출력하는 1의 개수 의미하는 반복문 # 1 > 3 > 5 > 7 출력\n",
     "            print(1, end = \"\")\n",
-    "        for j in range(1, n-i) : # 뒷 부분 0의 개수를 의미하는 반복문 # 시행마다 출력되는 0개수 감소 # 출력 행을 의미하는 i를 사용\n",
+    "        for j in range(n-i) : # 뒷 부분 0의 개수를 의미하는 반복문 # 시행마다 출력되는 0개수 감소 # 출력 행을 의미하는 i를 사용\n",
     "            print(0, end=\"\")\n",
     "        print()\n",
     "    for i in range(n) : # 마름모 아래 부분 출력 행 개수 의미하는 반복문 # i값 출력되는 행에 대한 의미를 가지고 있는 중요 변수\n",
@@ -1075,9 +1075,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "163c5ffc",
+   "metadata": {},
+   "source": [
+    "# 87"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a4491c",
+   "metadata": {},
+   "source": [
+    "# 86"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff6c85e9",
+   "metadata": {},
+   "source": [
+    "# 85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b5e2555c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "011111\n",
+      "001111\n",
+      "000111\n",
+      "000011\n",
+      "000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 풀이\n",
+    "num_0_count = 1 # 처음 0 개수\n",
+    "num_1_count = 5 # 처음 1 개수\n",
+    "\n",
+    "while(num_1_count >= 1) : # num_1_count가 1보다 작아지면 종료\n",
+    "    print(f\"{str(0)*num_0_count}{str(1)*num_1_count}\")\n",
+    "\n",
+    "    num_0_count += 1 # 1씩 증가\n",
+    "    num_1_count -= 1 # 1씩 감소"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "be66f2e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "011111\n",
+      "001111\n",
+      "000111\n",
+      "000011\n",
+      "000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 풀이\n",
+    "\n",
+    "for i in range(5) : # 1번 반복문 의미 : 출력 행 개수\n",
+    "    for j in range(i+1) : # 시행마다 0 출력 개수 의미\n",
+    "        print('0',end=\"\")\n",
+    "    for j in range(5-i) : # 시행마다 1 출력 개수 의미 5 > 4 > 3 > 2 > 1 \n",
+    "        print('1', end =\"\")\n",
+    "    print() # 행 변경"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0805437",
+   "id": "10fdae85",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1144,8 +1227,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d23402d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'list_iterator'>\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "\n",
+    "print(type(a)) # list 출력\n",
+    "a = iter(a)\n",
+    "print(type(a)) # list_iterator 출력\n",
+    "print(a.__next__()) # 첫 실행시 1 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "440afd7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12be8d17",
    "metadata": {},
    "outputs": [],
    "source": []
